--- a/InternalUAMTv/InternalUAMTv/Search/search.html
+++ b/InternalUAMTv/InternalUAMTv/Search/search.html
@@ -68,7 +68,7 @@
            <i class="fa fa-film"></i>
            <p class="errMsg">Oops!!</p>
            <p>Sembra che non siamo riusciti a trovare alcuna corrispondenza.</p> 
-           <p>Riprova o naviga su Armadi.</p>
+           <p>Riprova con una chiave di ricerca differente.</p>
            </div>
         </div>
     </body>
