--- a/InternalUAMTv/InternalUAMTv/home/home.html
+++ b/InternalUAMTv/InternalUAMTv/home/home.html
@@ -72,7 +72,7 @@
                     <button id="fav_btn_id" onclick="showFavouriteSection()">
                         <span><i class="far fa-star"></i></span>  <span class="ml-3" id="fav_txt"> Favourites</span>
                     </button>
-                     <button id="fav_btn_id" onclick="logout()">
+                     <button id="logout_btn_id" onclick="logout()">
                         <span><i class="fas fa-sign-out-alt"></i></span>  <span class="ml-3" id="logout_txt"> Logout</span>
                     </button>
                 </div>
@@ -160,11 +160,11 @@
                             (CRT) systems which were later replaced by flat</p>
                         <p class="detail_year d-flex justify-content-start">
                             <span>2020</span>
-                            <button id="detail" class="nonstyle_btns ml-5">Details ></button>
+                            <button id="detail" class="nonstyle_btns ml-5">Scheda film ></button>
                         </p>
                         <span>
                         <button id="add_play_btn" class="play_btn mt-5">
-                            <i class="fa fa-play text-white ply_now_style"></i><span class="ml-3"> Riproduci ora</span>
+                            <i class="fa fa-play text-white ply_now_style"></i><span class="ml-3"> Guarda ora</span>
                         </button>
                        
                         <button class="favourite_btn mt-5">
@@ -193,7 +193,7 @@
                                 <div class="d-flex justify-content-between catagory_type_text">
                                     <p id="category_list_id">Category</p>
 
-                                    <button id="see_more_cat_list_id" class="nonstyle_btns">Vedi altro ></button>
+                                    <button id="see_more_cat_list_id" class="nonstyle_btns">Vedi tutte ></button>
                                 </div>
                                 <div id="myCarousel1" class="carousel slide" data-ride="carousel" data-interval="0">
                                     <!-- Wrapper for carousel items -->
@@ -217,7 +217,7 @@
                             <div class="col-lg-12 mx-auto ml-5">
                                 <div class="d-flex justify-content-between catagory_type_text">
                                     <p id="most_viewed_list_id">Most Viewed</p>
-                                    <button id="see_more_view_list_id" class="nonstyle_btns">Vedi altro ></button>
+                                    <button id="see_more_view_list_id" class="nonstyle_btns">Vedi altri ></button>
                                 </div>
                                 <div id="myCarousel2" class="carousel slide" data-ride="carousel" data-interval="0">
                                     <!-- Wrapper for carousel items -->
@@ -242,7 +242,7 @@
                             <div class="col-lg-12 mx-auto ml-5">
                                 <div class="d-flex justify-content-between catagory_type_text">
                                     <p id="most_recent_list_id">Most Recent</p>
-                                    <button id="see_more_recent_list_id" class="nonstyle_btns" >Vedi altro ></button>
+                                    <button id="see_more_recent_list_id" class="nonstyle_btns" >Vedi altri ></button>
                                 </div>
                                 <div id="myCarousel3" class="carousel slide" data-ride="carousel" data-interval="0">
                                     <!-- Wrapper for carousel items -->
@@ -268,7 +268,7 @@
                             <div class="col-lg-12 col-xl-12 ml-4 mt-5">
                                 <h1 class="mt-3" style="font-size: 47px; font-weight: bold;">Categorie</h1>
                                 <p class="mt-5" style="font-size: 25px;">
-                                    <i class="fas fa-align-justify mr-3"></i> Tutti i generi e la raccolta
+                                    <i class="fas fa-align-justify mr-3"></i> Tutte le categorie
                                 </p>
                                 <div id="container-fluid-category-id" class="container-fluid mt-4"></div>
                             </div>
@@ -281,7 +281,7 @@
                     <div class=" container-fluid pl-5pr-5 ">
                         <div class="row ">
                             <div class="col-lg-12 col-xl-12 ml-2">
-                                <h1 class="mt-3" style="font-size: 47px; font-weight: bold;">Preferite</h1>
+                                <h1 class="mt-3" style="font-size: 47px; font-weight: bold;">Preferiti</h1>
                                 <div id="container-fluid-favourite-id" class="container-fluid mt-4"></div>
                             </div>
                         </div>
