--- a/InternalUAMTv/InternalUAMTv/signup/signup.html
+++ b/InternalUAMTv/InternalUAMTv/signup/signup.html
@@ -41,11 +41,11 @@
         <div class="section1">
             <img alt="" src="../images/logo.svg">
             <br>
-            <h1 class="heading">La TV che può cambiare il tuo <br/> visione del mondo.</h1>
+            <h1 class="heading">La TV che può cambiare la tua <br/> visione del mondo.</h1>
         </div>
         <div class="section2">
             <div class="container">
-                <h1 class="signin" id="signIn_text_id">Register</h1>
+                <h1 class="signin" id="signIn_text_id">Iscriviti</h1>
                 <br>
                 <br>
                 <input id="email" class="inputsE" type="text" placeholder="E-mail">
@@ -69,8 +69,8 @@
                 <br>
                 <br>
                 <div class="chebox_btn_section">
-                    <h2>Already a user ? <button class="nonStyle_btn"  id="subscribe" ><strong>Sign In</strong></button></h2>
-                    <button id="loginBtnID" class="loginBtn">Register</button>
+                    <h2>Già iscritto? Vai al <button class="nonStyle_btn"  id="subscribe" ><strong>login</strong></button></h2>
+                    <button id="loginBtnID" class="loginBtn">Iscriviti</button>
                 </div>
             </div>
         </div>
