--- a/InternalUAMTv/InternalUAMTv/detail/detail.html
+++ b/InternalUAMTv/InternalUAMTv/detail/detail.html
@@ -131,11 +131,11 @@
 
                 <span>
 
-                <button id="playButton"  class="play_btn mt-5"><i class="fa fa-play text-white"></i><span class="ml-3">Riproduci ora</span>
+                <button id="playButton"  class="play_btn mt-5"><i class="fa fa-play text-white"></i><span class="ml-3">Guarda ora</span>
                 </button>
                 <button id="trail_btn"  class="watch_btn mt-5"><i class="fa fa-film text-white"></i>Guarda il trailer</button>
                 <button id="add_fav_button_id" class="watch_btn mt-5 ml-5"><i class="far fa-star text-white"></i>Aggiungi ai preferiti</button>
-                <button id="already_fav_button_id"  style='display:none;' class="fav_added mt-5 ml-5"><i class="fa fa-star text-white" ></i>Preferita</button>
+                <button id="already_fav_button_id"  style='display:none;' class="fav_added mt-5 ml-5"><i class="fa fa-star text-white" ></i>Preferito</button>
 
             <!-- <span><i class="far fa-heart text-white " id="heart_icon "></i> </span> -->
 
@@ -146,7 +146,7 @@
                 <div class="row mt-5">
                     <div class="col-8 mt-5">
                       <div class="d-flex justify-content-between category_text">
-                           <p>Synopsys</p>
+                           <p>Sinossi</p>
 
                       </div>
 
@@ -169,7 +169,7 @@
                 <br>
                 <br>
                <br>
-                <h2 class="cast">Direttore</h2>
+                <h2 class="cast">Regia</h2>
                 <div id="menu">
                     <br>
                     <br>
