--- a/InternalUAMTv/InternalUAMTv/login.html
+++ b/InternalUAMTv/InternalUAMTv/login.html
@@ -24,22 +24,22 @@
  <div id="opacity_effect">
  <div class="section1">
 <img alt="" src="../images/logo.svg"> <br>
-<h1 class="heading">La TV che può cambiare il tuo <br/> visione del mondo.</h1>
+<h1 class="heading">La TV che può cambiare la tua <br/> visione del mondo.</h1>
 </div>
 <div class="section2">
 <div class="container">
 <h1 class="signin" id="signIn_text_id" ></h1><br><br>
 <input id="email" class="inputsE" type="text" placeholder="E-mail"> 
 <i class="fa fa-envelope"></i><br> <br><br>
-<input id="pass" class="inputsE" type="password" placeholder="Parola d'ordine"> 
+<input id="pass" class="inputsE" type="password" placeholder="Password"> 
 <i class="fa fa-lock"></i><br><br><br>
 <div class="chebox_btn_section">
 <div><input id = "remember" type="checkbox" class="checkBox"><label id="remmber_label"></label></div>
 <button class="loginBtn"  id="loginButton" ></button>
 </div> <br> <br><br>
 <button class="nonStyle_btn"  id="forgotPassword" ></button> <br>
-<h2>Non sei un abbonato ? <button class="nonStyle_btn"  id="subscribe" ><strong>Iscriviti ora</strong></button></h2>
-<hr>
+<h2>Non sei ancora abbonato ? <button class="nonStyle_btn"  id="subscribe" ><strong>Iscriviti ora</strong></button></h2>
+<!-- <hr>  -->
 </div>
 </div>
  </div>
