--- a/InternalUAMTv/InternalUAMTv/splash.html
+++ b/InternalUAMTv/InternalUAMTv/splash.html
@@ -15,6 +15,6 @@
 <body>
 <img alt="Image is not available" src="images/bgImage.png" class="bgImage">
 <img alt="Image is not available" src="images/logo.svg" class="logoImage">
-<h1 class="heading" id="splash_heading_id">La TV che può cambiare il tuo <br/> visione del mondo.</h1>     
+<h1 class="heading" id="splash_heading_id">La TV che può cambiare la tua <br/> visione del mondo.</h1>     
 </body>
 </html>
