--- a/InternalUAMTv/InternalUAMTv/Search/search.html
+++ b/InternalUAMTv/InternalUAMTv/Search/search.html
@@ -61,7 +61,7 @@
                 <i class="fa fa-search" id="serachBtn" onclick="searchButtonStyle()"></i>
                 <input type="text" id="search_field_id" class="form-control searchInput" placeholder="Search here">
             </div>        
-            <div id="container-fluid_id" class="container-fluid mt-2" style="display: none;">            
+            <div id="container-fluid_id" class="container-fluid mt-2" style="position: relative;top: 4vh;display: none;">            
             </div>
            </div>
            <div id="not_found_id" class="not_Found">
