--- a/InternalUAMTv/InternalUAMTv/Video/video.html
+++ b/InternalUAMTv/InternalUAMTv/Video/video.html
@@ -22,7 +22,9 @@
 
 <body>
 
-<video id="player_one" class="video-js vjs-fluid vjs-default-skin" controls preload playsinline poster="" data-setup='{ "inactivityTimeout": 0 }'>
+
+<!-- data-setup='{ "inactivityTimeout": 0 }' -->
+<video id="player_one" class="video-js vjs-fluid vjs-default-skin" controls preload playsinline poster="" >
 </video>
 <div class="text_documentry " style="visibility: hidden;">Documentry</div>
 <div class="text_view ml-5" style="visibility: hidden;">216K Views</div>
