chnanges in home and detail screen

--- a/InternalUAMTv/InternalUAMTv/detail/detail.html
+++ b/InternalUAMTv/InternalUAMTv/detail/detail.html
@@ -129,7 +129,7 @@
                  <span class="age"> 18+</span></p>
                   -->
 
-                <span>
+                <span style="display: none;">
 
                 <button id="playButton"  class="play_btn mt-5"><i class="fa fa-play text-white"></i><span class="ml-3">Guarda ora</span>
                 </button>
@@ -141,7 +141,7 @@
 
             </span>
            
-
+                   <p class="unsubscribeText" id="unsubscribeUser">Dummy Text for Unsubsribed User</p>
             <div class="container-fluid">
                 <div class="row mt-5">
                     <div class="col-8 mt-5">
