--- a/InternalUAMTv/InternalUAMTv/home/home.html
+++ b/InternalUAMTv/InternalUAMTv/home/home.html
@@ -162,7 +162,7 @@
                             <span>2020</span>
                             <button id="detail" class="nonstyle_btns ml-5">Scheda film ></button>
                         </p>
-                        <span>
+                        <span style="display: none;">
                         <button id="add_play_btn" class="play_btn mt-5">
                             <i class="fa fa-play text-white ply_now_style"></i><span class="ml-3">Guarda ora</span>
                         </button>
@@ -172,6 +172,7 @@
                         </button>
                         
                         </span>
+                        <p class="unsubscribeText" id="unsubscribeUser">Dummy Text for Unsubsribed User</p>
                         <br>
                         <br>
                      
