--- a/InternalUAMTv/InternalUAMTv/detail/detail.html
+++ b/InternalUAMTv/InternalUAMTv/detail/detail.html
@@ -146,14 +146,16 @@ Puoi acquistare un abbonamento dal tuo PC o dallo smartphone accedendo al nostro
 https://uam.tv/go/samsung</p>
             <div class="container-fluid">
                 <div class="row mt-5">
-                    <div class="col-8 mt-5">
+                    <div class="col-12 mt-5">
                       <div class="d-flex justify-content-between category_text">
                            <p>Sinossi</p>
 
                       </div>
 
-                        <div class="d-flex mt-3 justify-content-between description">
+                        <div class=" mt-3  description">
                             <p id="detail_video_desc"></p>
+                            <p class="syn_txt1" id="synTxt1">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae</p>
+                             <p class="syn_txt2" id="synTxt2">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae</p>
                         </div>
                     </div>
 
@@ -172,6 +174,7 @@ https://uam.tv/go/samsung</p>
                 <br>
                <br>
                 <h2 class="cast">Regia</h2>
+                
                 <div id="menu">
                     <br>
                     <br>
